# backup

FACULDADE/ARQUITETURA DE BANCO DE DADOS/: sqlinsert.txt
FACULDADE/ARQUITETURA DE BANCO DE DADOS/Aula 09/: AcademiaFisico.sql  Formativa.sql  Formativa2.sql  InsertsAcademia.sql  (+2 more)
FACULDADE/CONECTIVIDADE DE SISTEMAS/: F10 - Packet Tracer Roteamento.docx  Roteamento.pkt
FACULDADE/Matemática Discreta /: Introdução a Lógica Formal.docx  algoritmo_recursivo  algoritmo_recursivo.c
FACULDADE/PIBIC/: Atualizações Projeto PIBIC.txt  PIBIC - DANIEL PEREIRA LIMA.docx  Repositórios Úteis.txt  gazebo_prompts
FACULDADE/PIBIC/project_ws/: CMakeLists.txt
FACULDADE/PIBIC/project_ws/install/: local_setup.sh  setup.sh
FACULDADE/PIBIC/project_ws/install/gazebo_gz_to_ros2/share/gazebo_gz_to_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
FACULDADE/PIBIC/project_ws/install/gazebo_gz_to_ros2/share/gazebo_gz_to_ros2/cmake/: gazebo_gz_to_ros2Config.cmake
FACULDADE/PIBIC/project_ws/install/gazebo_gz_to_ros2/share/gazebo_gz_to_ros2/config/ros_gz_yaml/: ros_gz_tugbotwarehouse_bridge.yaml
FACULDADE/PIBIC/project_ws/install/gazebo_gz_to_ros2/share/gazebo_gz_to_ros2/config/rviz/: tugbotwarehouse.rviz
FACULDADE/PIBIC/project_ws/install/gazebo_gz_to_ros2/share/gazebo_gz_to_ros2/launch/: tugbotinWarehouse.launch.py
FACULDADE/PIBIC/project_ws/log/: latest_build
FACULDADE/PIBIC/project_ws/scripts/: Pose_to_tf
FACULDADE/ÉTICA/: Questões conceituais sobre o modelo ético do dever - kant - RESPONDIDO.odt
sublime/C/: teste  teste.c
(+210 files in other folders)
